Remove wait for sync from v1beta1 (#500)
